--- a/styles/media.css
+++ b/styles/media.css
@@ -2,7 +2,8 @@
 
     header {
         flex-direction: column;
-        text-align: center;
+        text-align:center;
+        
     }
 
     main {
@@ -11,6 +12,7 @@
 
     h2 {
         font-size: 38px;
+
     }
 
     img {
@@ -18,11 +20,22 @@
         width: 300px;
     }
 
-    ul {
-       display: flex;
-       flex-direction: column;
-       align-self: center;
-       text-align: center;
+    .rodape {
+        font-size: 15px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .siganos {
+        font-size: 15px;
+        margin-left: 20%;
+        margin-right: 0;
+
+    }
+
+    .redes {
+        margin-left: 20%;
+        margin-right: 0;
+        margin-bottom: 20px;
     }
 
 }
