--- a/styles/portaldevagas.css
+++ b/styles/portaldevagas.css
@@ -57,17 +57,18 @@ article {
     margin-top: 100px;
     display: flex-grid;
     
+    
 }
 
 #vaga-exemplo {
+    justify-self:top;
     width: 350px;
     border-radius: 20px;
-    position: relative;
     margin :12px;
     transition: 0.5s;
     cursor: pointer;
     border: 5px solid #7FFFD4;
-    align-items:initial;
+    
     
     
     
